[package]
name = "insiders_job"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "insiders_job"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.31.1"}
spl-associated-token-account = "7.0.0"
spl-token-2022 = "9.0.0"
spl-token-metadata-interface = "0.7.0"

